# PageMonitorV2

./: AssemblyObfuscations.hpp  CMakeLists.txt  Global.hpp  Logger.cpp  Logger.hpp  PageMonitorV2.tmd  README.md  Utilities.cpp  Utilities.hpp  main.cpp
Assembly/: functions.h  functions.x64.asm
Dependencies/Capstone/suite/synctools/tablegen/X86/: X86InstrInfo.td  X86InstrInfo_reduce.td
Dependencies/Capstone/suite/synctools/tablegen/X86/back/: X86InstrInfo.td  X86InstrInfo_reduce.td
Dependencies/Imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp
Dependencies/Imgui/backends/: imgui_impl_win32.cpp  imgui_impl_win32.h
Dependencies/Imgui/docs/: CHANGELOG.txt
Dependencies/Imgui/misc/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
Dependencies/include/: clipp.hpp
Dependencies/oxorany/: CMakeLists.txt  oxorany.h
Dumper/: Dumper.cpp  Dumper.hpp  ImageDumper.cpp  ImageDumper.hpp  ProcessImage.hpp  SectionPatcher.cpp  SectionPatcher.hpp
Dumper/Readers/: RemoteReader.cpp  RemoteReader.hpp  WinApi.cpp  WinApi.hpp
Exceptions/: RenderInitializationError.hpp
Graphics/: Color4.hpp  README.MD  Renderable.cpp  Renderable.hpp  RenderableStub.hpp
Graphics/ImmediateGui/: Keycodes.hpp  PagedWindow.cpp  PagedWindow.hpp
Graphics/Render/: Dx11.cpp  Dx11.hpp  RenderBackend.hpp  RenderManager.cpp  RenderManager.hpp  WindowManager.cpp  WindowManager.hpp
Graphics/UserInterface/: UserInterface.cpp  UserInterface.hpp
Graphics/UserInterface/Pages/: CreditsPage.cpp  CreditsPage.hpp  MainPage.cpp  MainPage.hpp  SettingsPage.cpp  SettingsPage.hpp
Miscellaneous/: Initializable.cpp  Initializable.hpp  ListenableEvent.hpp  OpaqueClass.hpp  README.MD
Protections/: ObscuredValue.cpp  ObscuredValue.hpp  VMTShuffle.hpp
Protections/ObscuredMethod/: Obscurable.hpp  XorObscurable.hpp
Win32/: PortableExecutable.cpp  PortableExecutable.hpp  Process.cpp  Process.hpp
